CLOSED FIXED75450
Inline PDF doesn't preview correctly when attempting to print its frame
https://bugs.webkit.org/show_bug.cgi?id=75450
Summary Inline PDF doesn't preview correctly when attempting to print its frame
Chris Petersen
Reported 2012-01-02 15:11:08 PST
1) Launch Webkit revision 103908 under Mac OS X 10.7.2 and go to http://www.cs.tut.fi/~jkorpela/html/iframe-pdf.html 2) Notice inline PDFs load in the iframes 3) Ctrl-click on one of the iframes and choose Print Frame 4) In Print dialog , verify the thumbnail preview is "empty" ( 4 of 4 pages ) 5) In Print dialog, click in PDF --> Open PDF in Preview. Notice the PDF opened in Preview doesn't display the PDF content. So the thumbnail preview is wrong since it's "empty".
Attachments
mitz
Comment 1 2012-01-02 22:52:36 PST
This was broken by a typo in r103871 (GC instead of CG).
mitz
Comment 2 2012-01-02 22:56:57 PST
Chris Petersen
Comment 3 2012-01-02 23:24:33 PST
Verified fixed in Webkit TOT 103926 on Mac OS X 10.7.2. Thanks !
Alexey Proskuryakov
Comment 4 2012-01-03 14:33:36 PST
*** Bug 75480 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.