Fixed a typo I made in r103871.

Fixes <http://webkit.org/b/75450> Inline PDF doesn't preview correctly when attempting to print its frame

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::drawRectToPDF): Changed USE(GC) to USE(CG).



Canonical link: https://commits.webkit.org/92223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103925 268f45cc-cd09-0410-ab3c-d52691b4dbfc